# datum

./: CMakeLists.txt  README.md  datum.sln
data/: actor.geometry.vert  actor.prepass.vert  actor.shadow.vert  actor.spotmap.vert  actor.vert  bloom.blend.frag  bloom.blend.vert  bloom.hblur.comp  bloom.luma.comp  bloom.tone.comp  bloom.vblur.comp  bound.glsl  bound.inc  camera.glsl  camera.inc  cluster.comp  color.hblur.comp  color.vblur.comp  composite.frag  composite.vert  convolve.comp  depth.blit.comp  depth.frag  depth.mip.comp  depth.vert  esm.gen.comp  esm.hblur.comp  esm.vblur.comp  fog.density.comp  fog.scatter.comp  fogplane.frag  fogplane.vert  foilage.geometry.vert  foilage.prepass.vert  foilage.shadow.vert  foilage.spotmap.vert  gbuffer.glsl  gbuffer.inc  geometry.frag  geometry.vert  (+78 more)
examples/: CMakeLists.txt  example-win32.cpp  example-xcb.cpp  platform.cpp
examples/asteroids/: CMakeLists.txt  asteroids.cpp  asteroids.h  readme.txt
examples/character/: CMakeLists.txt  character.cpp  character.h
examples/character/data/: mannequin.txt
examples/material/: CMakeLists.txt  material.cpp  material.h
examples/material/data/: battleaxe.txt
examples/ocean/: CMakeLists.txt  ocean.cpp  ocean.h
examples/skybox/: CMakeLists.txt  skybox.cpp  skybox.h
examples/stardust/: CMakeLists.txt  readme.txt  stardust.cpp  stardust.h
examples/teapot/: CMakeLists.txt  teapot.cpp  teapot.h
examples/triangle/: CMakeLists.txt  triangle.cpp  triangle.h
include/: datum.h
include/datum/: asset.h  assetpack.h  debug.h  math.h  memory.h  ocean.h  platform.h  renderer.h  scene.h
include/leap/: optional.h  pathstring.h  stringview.h  util.h
include/leap/lml/: bound.h  geometry.h  matrix.h  matrixconstants.h  octree.h  point.h  quaternion.h  rtree.h  simplematrix.h  vector.h
src/: CMakeLists.txt  asset.cpp  asset.h  assetpack.cpp  assetpack.h  corepack.h  datum.vcxproj  datum.vcxproj.filters  debug.cpp  debug.h  memory.h  platform.h  renderlist.cpp  renderlist.h
src/leap/: CMakeLists.txt  leap.vcxproj  leap.vcxproj.filters
src/math/: attenuation.h  bound.h  color.h  frustum.h  line.h  perlin.h  plane.h  rect.h  sphere.h  transform.h  vec.h
src/renderer/: animation.cpp  animation.h  camera.cpp  camera.h  casterlist.cpp  casterlist.h  colorlut.cpp  colorlut.h  commandlist.cpp  commandlist.h  commandlump.cpp  commandlump.h  decal.cpp  decal.h  decallist.cpp  decallist.h  envmap.cpp  envmap.h  font.cpp  font.h  forwardlist.cpp  forwardlist.h  geometrylist.cpp  geometrylist.h  lightlist.cpp  lightlist.h  material.cpp  material.h  mesh.cpp  mesh.h  meshlist.cpp  meshlist.h  occlusion.cpp  occlusion.h  ocean.cpp  ocean.h  overlaylist.cpp  overlaylist.h  particlesystem.cpp  particlesystem.h  (+18 more)
src/scene/: actorcomponent.cpp  actorcomponent.h  basiccomponent.h  delegate.h  entity.cpp  entity.h  lightcomponent.cpp  lightcomponent.h  meshcomponent.cpp  meshcomponent.h  model.cpp  model.h  namecomponent.cpp  namecomponent.h  particlesystemcomponent.cpp  particlesystemcomponent.h  scene.cpp  scene.h  spritecomponent.cpp  spritecomponent.h  storage.h  transformcomponent.cpp  transformcomponent.h
test/: CMakeLists.txt  datumtest-win32.cpp  datumtest-xcb.cpp  datumtest.cpp  datumtest.h  datumtest.vcxproj  datumtest.vcxproj.filters  fallback.h  platform.cpp  platform.h
tools/: CMakeLists.txt  assetbuilder.cpp  assetcompressor.cpp  assetdump.cpp  assetembed.cpp  assetpacker.cpp  assetpacker.h  atlaspacker.h  bc3.cpp  bc3.h  debugviewer.cpp  glslang.cpp  glslang.h  hdr.cpp  hdr.h  ibl.cpp  ibl.h  objparser.cpp
